--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,8 +11,7 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:label="@string/app_name" >
         <activity
             android:name=".SplashActivity"
             android:label="@string/app_name" >
@@ -23,6 +22,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".Game" android:configChanges="orientation"></activity>
+        <activity android:name=".ChooseLevelActivity" android:configChanges="orientation"></activity>
         <activity android:name=".MainActivity" android:configChanges="orientation"></activity>
     </application>
 
