Main menu optimization

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,7 +20,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Game" android:configChanges="orientation"></activity>
+        <activity android:name=".MainMenuActivity" android:configChanges="orientation"></activity>
         <activity android:name=".ChooseLevelActivity" android:configChanges="orientation"></activity>
         <activity android:name=".MainActivity" android:configChanges="orientation"></activity>
         <activity android:name=".EndMainActivity" android:configChanges="orientation"></activity>
