--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,17 +13,17 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
-            android:name=".SplashActivity"
+            android:name=".activities.SplashActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainMenuActivity" android:configChanges="orientation"></activity>
-        <activity android:name=".ChooseLevelActivity" android:configChanges="orientation"></activity>
-        <activity android:name=".MainActivity" android:configChanges="orientation"></activity>
-        <activity android:name=".EndMainActivity" android:configChanges="orientation"></activity>
+        <activity android:name=".activities.MainMenuActivity" android:configChanges="orientation"></activity>
+        <activity android:name=".activities.ChooseLevelActivity" android:configChanges="orientation"></activity>
+        <activity android:name=".activities.MainActivity" android:configChanges="orientation"></activity>
+        <activity android:name=".activities.EndMainActivity" android:configChanges="orientation"></activity>
     </application>
 
 </manifest>
